.app wrapper removed altogether; fixed Dark Reader behavior by properly overflow to body and putting scroll on it

--- a/src/features/Contact/contact.module.scss
+++ b/src/features/Contact/contact.module.scss
@@ -4,6 +4,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    height: 100%;
     p {
         margin: 0.5rem 0;
     }
